--- a/src/App.css
+++ b/src/App.css
@@ -42,9 +42,9 @@
     display: block;
     position: relative;
     padding-left: 35px;
-    margin-bottom: 12px;
+    padding-top: 5px;
     cursor: pointer;
-    font-size: 22px;
+    font-size: 18px;
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
