--- a/src/App.css
+++ b/src/App.css
@@ -100,3 +100,18 @@
     border-radius: 50%;
     background: #262525;
 }
+
+/* Navbar */
+.navbar-title {
+    text-align: center;
+    width: 100%;
+    font-weight: bold;
+    padding-top: 10px;
+    padding-left: 20px;
+}
+
+.navbar-menu-icon {
+    padding-right: 20px;
+    padding-top: 10px;
+    font-size: 20px;
+}
