--- a/src/App.css
+++ b/src/App.css
@@ -79,13 +79,14 @@
 .navbar-title {
     text-align: center;
     width: 100%;
+    font-size: 17px;
     font-weight: bold;
     padding-top: 10px;
     padding-left: 30px;
 }
 
 .navbar-menu-icon {
-    padding-right: 10px;
+    padding-right: 15px;
     padding-top: 10px;
     font-size: 20px;
 }
@@ -109,8 +110,52 @@
 
 /* Audiobook card */
 .audiobook {
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-top: 12px;
+    margin-bottom: 12px;
+}
+
+.audiobook-title {
+    font-weight: 700;
+    font-size: 16px;
+}
+
+.audiobook-authors {
+    font-weight: 700;
+    font-size: 14px;
+}
+
+.audiobook-narrators {
+    font-weight: 400;
+    font-size: 12px;
+    color: #262525;
+    opacity: 0.7;
+}
+
+.audiobook-read-percentage {
+    font-weight: 400;
+    font-size: 12px;
+    color: #262525;
+}
+
+.audiobook-download-text {
+    font-weight: 400;
+    font-size: 12px;
+    color: #262525;
+    opacity: 0.7;
+}
+
+.audiobook-remaining-time {
+    font-weight: 400;
+    font-size: 12px;
+    color: #262525;
+    opacity: 0.7;
+    text-align: right;
+}
+
+.check-icon {
+    color: "#36dca5";
+    font-size: "1.8em";
+    padding-top: 8px;
 }
 
 .ui.grid {
@@ -123,5 +168,5 @@
 .audiobook-cover-img {
     height: 100px;
     width: 100px;
-    border-radius: 10px;
+    border-radius: 6px;
 }
