Update modal cancel button

--- a/src/App.css
+++ b/src/App.css
@@ -110,6 +110,8 @@
     font-weight: bold;
     background-color: #6fe2e6;
     color: #262525;
+    font-family: "Nunito Sans";
+    font-size: 16px;
 }
 
 .modal-title {
